landing page created

--- a/css/media_queries.css
+++ b/css/media_queries.css
@@ -19,6 +19,12 @@
         color: #AF9164;
         font-size: 25px;
     }
+    .fas.fa-pizza-slice{
+        color: #AF9164;
+        margin-right: 10px;
+        font-size: 25px;
+    
+    }
     .nav-links {
         position: absolute;
         right: 0px;
@@ -58,13 +64,13 @@
 }
 
 .toggle .line1{
-    transform: rotate(-45deg) translate(-5px, 6px);
+    transform: rotate(-45deg) translate(-6px, 6px);
 }
 .toggle .line2{
     opacity: 0;
 }
 .toggle .line3{
-    transform: rotate(45deg) translate(-5px, -6px);
+    transform: rotate(45deg) translate(-6px, -6px);
 }
 }
 
