--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ nav{
 
 
 .cover{
-    background-image: url('/assets/pizza-1.jpg');
+    background-image: url('/cart-items/bg2.jpg');
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -132,13 +132,28 @@ nav{
 
 .first-card{
     width: 20rem;
-    background: #2b21188e;
+    background: #2b2118ed;
     text-align: center;
     padding: 10px;
 }
+.cover-div{
+    border: 3px ridge #AF9164;
+    margin: 30px;
+    width: 200px;
+}
 
 .second-card{
-    width: 30rem;
+    width: 40rem;
+    border: none;
+}
+.video__container{
+    width: 100%;
+    height: 100%;
+}
+.video__item{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .card-text{
     color: #f0f4f5;
@@ -151,4 +166,11 @@ nav{
     font-family: 'Concert One', cursive;
     text-align: center;
     justify-content: center;
+    background: #0e0404b2;
+    border: 1px solid #AF9164;
+}
+
+.btn:hover{
+    background: #af9164ea;
+    border: 1px solid #0e0404b2;
 }
