--- a/css/styles.css
+++ b/css/styles.css
@@ -56,8 +56,9 @@ nav{
 .nav-links a:hover{
     color: #B3B6B7;
     transition: 0.2s ease-in;
-
 }
+
+
 .burger{
     display: none;
     cursor: pointer;
@@ -168,9 +169,41 @@ nav{
     justify-content: center;
     background: #0e0404b2;
     border: 1px solid #AF9164;
+    outline: none !important;
 }
 
 .btn:hover{
     background: #af9164ea;
     border: 1px solid #0e0404b2;
+    color: #0e0404b2;
 }
+
+/* about */
+.about-img__container {
+    position: relative;
+}
+.span-about{
+    color: #415c62;
+    font-size: 40px;
+    font-family:  'beyond_the_mountainsregular', sans-serif;
+}
+
+.about-text{
+    font-family: 'Concert One', cursive;
+}
+.about-img__container::before {
+    content: "";
+    position: absolute;
+    top: -1.5rem;
+    left: -1.7rem;
+    width: 100%;
+    height: 100%;
+    outline: 0.5rem solid #AF9164;;
+    z-index: -1;
+    transition: all 1s ease-in-out;
+}
+.about-img__container:hover:before {
+    top: 0;
+    left: 0;
+}
+  /*end of  about */
