changed fonts for about us page

--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,10 @@ nav{
     font-family:  'beyond_the_mountainsregular', sans-serif;
 }
 
+.spane-color{
+    color: #AF9164;
+}
+
 .about-text{
     font-family: 'Concert One', cursive;
 }
