backgound image fixed bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,9 +94,8 @@ nav{
 }
 /* end of info icons */
 
-
 .cover{
-    background-image: url('../cart-items/bg1.jpg');
+    background-image: url('../assets/bg1.jpg');
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
