--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 }
 body{
     background-image: url('../assets/leather_1.png') center center;
+    overflow-x: hidden;
 }
 
 .bolder-colored{
@@ -99,7 +100,7 @@ nav{
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
-    min-height: 85vh;
+    min-height: 91vh;
 }
 
 .span-colored{
@@ -145,15 +146,6 @@ nav{
 .second-card{
     width: 40rem;
     border: none;
-}
-.video__container{
-    width: 100%;
-    height: 100%;
-}
-.video__item{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 .card-text{
     color: #f0f4f5;
@@ -310,4 +302,100 @@ nav{
     z-index: -1; 
     background: #000000d9; 
 }
+
+.contact{
+    background-image: url('../assets/contact.jpg');
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+}
+
+.contact h1{
+    text-align: center;
+    font-size: 50px;
+    padding: 20px;
+}
+
+input[type=text] {
+    color: #B3B6B7;
+    padding: 12px 20px;
+    margin: 8px 0;
+    background-color: inherit;
+}
+
+input[type=email] {
+    color: #B3B6B7;
+    padding: 12px 20px;
+    margin: 8px 0;
+    background-color: inherit;
+}
+textarea[type=text]{
+    color: #B3B6B7;
+    padding: 12px 20px;
+    margin: 8px 0;
+    background-color: inherit;
+}
+
+::placeholder {
+    color: #fff !important;
+    font-size: 20px;
+}
+
+input[type=submit]{
+    margin: 30px;
+    width:50%;
+    text-align: center;
+    background-color: #AF9164;
+    padding: 10px;
+    font-size: 20px;
+    border: none;
+    outline: none;
+}
+
+
+/* footer */
+.footer-section{
+    justify-content: center;
+    text-align: center;
+    display: block;
+    font-family: 'Concert One', cursive;
+    background-image: url('../assets/prism.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+.footer-heading{
+    padding: 10px;
+}
+.social-links{
+    display: flex;
+    justify-content: space-evenly;
+    color: #AF9164;
+    text-decoration: none;
+    list-style: none;
+    font-size: 30px;
+}
+.social-link:hover{
+    color: #B3B6B7;
+    cursor: pointer;
+    transition: 0.6s all;
+}
+.caret{
+    font-size: 40px;
+    color: #AF9164;
+    padding: 20px;
+    margin: 20px;
+}
+.caret:hover{
+    color: #B3B6B7;
+    cursor: pointer;
+    transition: 0.6s all;
+}
+.right{
+    padding: 5px;
+    color: #AF9164;
+}
+
 
