--- a/css/media_queries.css
+++ b/css/media_queries.css
@@ -3,9 +3,6 @@
         width: 60%;
     }
 }
-@media screen and (max-width:768px){
-    
-
 
 @media screen and (max-width:768px){
     body{
@@ -28,7 +25,7 @@
     .nav-links {
         position: absolute;
         right: 0px;
-        height: 85vh;
+        height: 62vh;
         top: 15vh;
         background-color: #2B2118;
         display: flex;
@@ -37,6 +34,8 @@
         width: 25%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
+        border-radius: 5px;
+        z-index: 1;
     }
 
     .nav-links li {
@@ -72,5 +71,112 @@
 .toggle .line3{
     transform: rotate(45deg) translate(-6px, -6px);
 }
-}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .cover{
+        min-height: 140vh;
+    }
+    .span-colored{
+        font-size: 20px;
+    }
+    .spann-colored{
+        font-size: 25px;
+    }
+    .span-color{
+        font-size: 18px;
+    }
+    .spann-color{
+        font-size: 20px;
+    }
+    .card{
+        width: 100%;
+        margin-right: auto;
+        margin-left: auto;
+    }
+    .card-text{
+        font-size: 16px;
+    }
+    .about-description{
+        text-align: center;
+        margin-right: auto;
+        margin-left: auto;
+    }
+    .span-about{
+        font-size: 20px;
+    }
+    .about-text{
+        text-align: justify;
+        margin-right: auto;
+        margin-left: auto;
+        word-spacing: 1px;
+    }
+    .pos-relative{
+        justify-content: center;
+        text-align: center;
+    }
+
+    .ribbon-cont{
+        margin-left: 120px;
+    }
+    .heading h2{
+        font-size: 40px;
+        padding: 10px;
+    }
+        .mt-5{
+            padding: 10px;
+        }
+
+        .contact h1{
+            margin-top: 10px;
+            padding: 8px;
+            font-size: 20px;
+        }
+        
+        input[type=text] {
+            width: 50%;
+            padding: 8px 10px;
+            font-size: 16px;
+            margin-right: auto;
+            margin-left: auto;
+        }
+        textarea[type=text] {
+            width: 50%;
+            padding: 8px 10px;
+            font-size: 16px;
+            margin-right: auto;
+            margin-left: auto;
+        }
+        input[type=email] {
+            width: 50%;
+            padding: 5px 10px;
+            font-size: 16px;
+            margin-right: auto;
+            margin-left: auto;
+        }
+        ::placeholder {
+            font-size: 16px;
+        }
+    
+        input[type=submit]{
+            text-align: center;
+            justify-content: center;
+            margin-left: 200px;
+            width:20%;
+            padding: 10px;
+            font-size: 16px;   
+        }
+    }
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {}
 
